kubesail_1/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: dcorto.usw1.kubesail.io
    http:
      paths:
        - backend:
            serviceName: nginx-service
            servicePort: 80
